[package]
name = "ghostfolio-parse"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.82"
clap = { version = "4.5.4", features = ["derive"] }
csv = "1.3.0"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"

[profile.release]
opt-level = 1               # Use slightly better optimizations.
overflow-checks = true     # Disable integer overflow checks.
